--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Gray Zone</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="bg-slate-950"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
   
